--- a/fail2ban-files/pve-web-auth.conf
+++ b/fail2ban-files/pve-web-auth.conf
@@ -1,7 +1,7 @@
 [pve-web-auth]
 enabled = true
 port = https,http,8006
-filter = pve-web-auth
+filter = pve-web-auth-filter
 logpath = /var/log/daemon.log
 maxretry = 5
 # 1 hour
